tests/NormalTests/paczka1/fuzzy1/68906742.err
Error in line 3: S940 S172 35,9
Error in line 1: cf7kSD S638 22,9
Error in line 4: lmxh29IG S172 98,9
Error in line 8: lmxh29IG S940 26,1
Error in line 9: dHgd40 S638 29,2
Error in line 19: dHgd40 A205 44,6
Error in line 29: dHgd40 S940 96,1
Error in line 22: YRwg S940 99,4
